# foosball-tournament-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
nginx/: nginx.conf
src/: bracket.py  consts.py  dto.py  exceptions.py  main.py  postgres.py  settings.py
